# CppSnakeGame

./: CMakeLists.txt  vcpkg.json
.github/workflows/: checks.yml
